# sistema-lanches-indio

./: .gitignore  README.md  pyproject.toml
src/: app.py
src/backend/: produtos.py
src/frontend/: cadastro.py
