[tool.poetry]
name = "sistema-lanches-indio"
version = "0.1.0"
description = ""
authors = ["Ismael Henrique Araujo Santana <ismael.santana@ifood.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
streamlit = "^1.39.0"
ruff = "^0.6.9"
taskipy = "^1.13.0"
google-auth = "^2.35.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.149.0"
pymongo = "^4.10.1"
gspread = "^6.1.3"

[tool.taskipy.tasks]
ruff = "ruff check"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
